--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -2,7 +2,7 @@
 @import "./_margins.scss";
 
 .app > .tme {
-  max-width: 1920px;
+  max-width: 1366px;
   margin: 0 auto;
 }
 
