--- a/src/scss/_flex.scss
+++ b/src/scss/_flex.scss
@@ -29,6 +29,20 @@
     &-fe {
       align-items: flex-end;
     }
+    &-st {
+      align-items: stretch;
+    }
+    &s {
+      &-fs {
+        align-self: flex-start;
+      }
+      &-fe {
+        align-self: flex-end;
+      }
+      &-c {
+        align-self: center;
+      }
+    }
   }
   &.d {
     &-row {
